--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ footer{
 
 <body>
 
-<h1>Twitch: Calisttenia</h1>
+<h1>Ludopatia Calisttenia</h1>
 
 <div class="scene">
     <div class="dice" id="dice">
@@ -209,4 +209,5 @@ function playSound(){
 
 </body>
 </html>
+
 
